# meta

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
metacore/: CMakeLists.txt
metacore/include/metacore/: CharacterTexture.h  EnvironmentTexture.h  GameState.h  LayoutBounds.h  MetaEngine.h  PickupUpgrade.h  Position.h  Tile.h  UpgradeChoices.h
metacore/src/: ArenaLayoutMechanic.cpp  ArenaLayoutMechanic.h  Clock.cpp  Clock.h  DefaultState.cpp  DefaultState.h  DungeonLayoutMechanic.cpp  DungeonLayoutMechanic.h  Enemies.cpp  Enemies.h  GameOverState.cpp  GameOverState.h  InitialPickingUpState.cpp  InitialPickingUpState.h  InitialState.cpp  InitialState.h  InternalGameState.cpp  InternalGameState.h  Layout.cpp  Layout.h  LayoutBounds.h  MetaEngine.cpp  OpenWorldLayoutMechanic.cpp  OpenWorldLayoutMechanic.h  Orientation.h  PickUpGenerator.cpp  PickUpGenerator.h  PickingUpState.cpp  PickingUpState.h  Pickup.h  Player.cpp  Player.h  PlayerAttackMechanic.h  PositionAndOrientation.h  PositionD.h  PositionDAndOrientation.h  RealTimeClock.cpp  RealTimeClock.h  ShootAttackMechanic.cpp  ShootAttackMechanic.h  (+8 more)
metacore/test/: ArenaLayoutMechanicTest.cpp  CMakeLists.txt  DefaultStateTest.cpp  EnemiesTest.cpp  GameOverStateTest.cpp  InitialPickingUpStateTest.cpp  InitialStateTest.cpp  MetaEngineTest.cpp  PickingUpStateTest.cpp  PlayerTest.cpp  PositionDTest.cpp  PositionTest.cpp  ShootAttackMechanicTest.cpp  SlashAttackMechanicTest.cpp
metaui/: CMakeLists.txt  meta.cpp
